# steam-matchmaker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  nginx.conf
.github/workflows/: deploy.yml
backend/: ai_service.py  main.py  models.py  pyproject.toml
frontend/: index.html  style.css
frontend/js/: config.js  friends.js  main.js  matching.js  steam-api.js
